force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/xDO_Base_QBrix_Register__mdt.object-meta.xml
<CustomObject>
    <description>WHAT: Central register that all QBrixes should write to when they&apos;re installed
        into an xDO.
        WHO: NextGen Demos Team
        WHEN: Nov 2021</description>
    <label>Installed QBrix</label>
    <pluralLabel>Installed QBrixes</pluralLabel>
</CustomObject>