force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>xDO_Content_Type__c</fullName>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata only</fullName>
            </value>
            <value>
                <fullName>Record Data only</fullName>
            </value>
            <value>
                <fullName>Metadata_and_Record_Data</fullName>
                <label>Metadata and Record Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>