force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Description__c.field-meta.xml
<CustomField>
    <fullName>xDO_Description__c</fullName>
    <description>WHAT: What this particular QBrix does
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>