force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>xDO_Documentation_Link__c</fullName>
    <description>WHAT: URL to QBrix documentation which could include installation, configuration or general QBrix information
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
    <label>Documentation Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>