force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Publisher__c.field-meta.xml
<CustomField>
    <fullName>xDO_Publisher__c</fullName>
    <description>WHAT: Name of the QBrix owner/publisher
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
    <label>Publisher</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>