force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>xDO_Repository_URL__c</fullName>
    <description>WHAT: Link to the Github/Source Control repository for this QBrix
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
    <label>Repository URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>