force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Type__c.field-meta.xml
<CustomField>
    <fullName>xDO_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Component</fullName>
            </value>
            <value>
                <fullName>Sales Play</fullName>
            </value>
            <value>
                <fullName>Industry Solution</fullName>
            </value>
            <value>
                <fullName>End to End Demo</fullName>
            </value>
            <value>
                <fullName>Data Pack</fullName>
            </value>
            <value>
                <fullName>Localization Pack</fullName>
            </value>
            <value>
                <fullName>Base xDO Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>