force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/fields/xDO_Version__c.field-meta.xml
<CustomField>
    <fullName>xDO_Version__c</fullName>
    <description>WHAT: Version of the QBrix installed
WHO: Kevin Akermanis
WHEN: Nov 2021</description>
    <label>Version</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>