force-app/main/default/objects/xDO_Base_QBrix_Register__mdt/listViews/All_Installed_QBrix.listView-meta.xml
<ListView>
    <fullName>All_Installed_QBrix</fullName>
    <columns>MasterLabel</columns>
    <columns>xDO_Type__c</columns>
    <columns>xDO_Publisher__c</columns>
    <columns>xDO_Version__c</columns>
    <columns>xDO_Content_Type__c</columns>
    <columns>xDO_Description__c</columns>
    <columns>xDO_Documentation_Link__c</columns>
    <columns>xDO_Repository_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Installed QBrix</label>
    <language>en_US</language>
</ListView>